feat: find user by email
